--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "jspm": {
     "dependencies": {
       "css": "github:systemjs/plugin-css@^0.1.36",
+      "jquery": "npm:jquery@^3.2.1",
       "react": "npm:react@^16.0.0",
       "react-dom": "npm:react-dom@^16.0.0",
       "semantic-ui": "github:Semantic-Org/Semantic-UI@^2.2.13"
@@ -32,5 +33,8 @@
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
     }
+  },
+  "dependencies": {
+    "escape-string-regexp": "^1.0.5"
   }
 }
