--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     }
   },
   "dependencies": {
-    "escape-string-regexp": "^1.0.5"
+    "escape-string-regexp": "^1.0.5",
+    "history": "^4.7.2",
+    "react-router-dom": "^4.2.2"
   }
 }
